# dockercraft

./: .gitignore  Cargo.toml  LICENSE  README.md  server_versions.json
.github/workflows/: build.yml  update.yml
docker/: Dockerfile  entrypoint.sh
docker/build-config/: server.properties
src/: main.rs
src/docker/: docker.rs
src/updaters/: manifest.rs  mod.rs  paper.rs  updater.rs
