[package]
name = "image-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = { version = "0.19.1", features = ["buildkit"]}
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.46.1", features = ["full"] }
futures-util = "0.3.31"
http-body-util = "0.1.3"
bytes = "1.10.1"
tar = "0.4.44"
serde = "1.0.219"
serde_json = "1.0.141"
anyhow = "1.0.98"
log = "0.4.27"